tests/snapshots/serde__display_error_prototype_uri.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew URIError(\"foo\")"
---
const v0 = new URIError("foo");
v0["stack"] = "URIError: foo\u{a}    at <anonymous>:1:1";
v0
