tests/snapshots/serde__display_float32array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array()"
---
new Float32Array()
