tests/snapshots/serde__display_float32array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([1.0])"
---
new Float32Array([
  1,
])
