tests/snapshots/serde__display_float32array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array(new ArrayBuffer(4, { maxByteLength: 12 }))"
---
const v0 = new ArrayBuffer(4, { maxByteLength: 12 });
new Float32Array(v0)
