tests/snapshots/serde__display_float32array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array(new ArrayBuffer(8, { maxByteLength: 12 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 12 });
new Float32Array(v0, 0, 1)
