tests/snapshots/serde__display_float32array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Float32Array(new ArrayBuffer(8, { maxByteLength: 12 })); a.set([1.0, -2.5]); a"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 12 });
new Float32Array(v0).set([
  1, -2.5,
]);
new Float32Array(v0)
