tests/snapshots/serde__display_float32array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([1, 2]).subarray(1, 2)"
---
new Float32Array([
  1, 2,
]).subarray(1, 2)
