tests/snapshots/serde__display_float32array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([1.0, -2.5])"
---
new Float32Array([
  1, -2.5,
])
