tests/snapshots/serde__display_float32array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array(2)"
---
new Float32Array(2)
