tests/snapshots/serde__display_float32array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float32Array([0, 0, 0])"
---
new Float32Array(3)
