tests/snapshots/serde__display_float64array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array()"
---
new Float64Array()
